--- a/Lab4.ipynb
+++ b/Lab4.ipynb
@@ -1073,47 +1073,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "40329442-18dd-4c21-9531-821bdd614821",
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Epoch: 20/20"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: total: 9.39 s\n",
-      "Wall time: 18.2 s\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Epoch: 20/20"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: total: 10.2 s\n",
-      "Wall time: 18.6 s\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Epoch: 20/20"
+     "ename": "NameError",
+     "evalue": "name 'df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_3608\\2989788734.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m df['State'].replace([0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51],\n\u001b[0m\u001b[0;32m      2\u001b[0m                     ['Alabama', 'Alaska', 'Arizona', 'Arkansas', 'California', 'Colorado', 'Connecticut', 'Delaware', 'District of Columbia', 'Florida', 'Georgia', 'Hawaii', 'Idaho', 'Illinois', 'Indiana', 'Iowa', 'Kansas', 'Kentucky', 'Louisiana', 'Maine', 'Maryland', 'Massachusetts', 'Michigan', 'Minnesota', 'Mississippi', 'Missouri', 'Montana', 'Nebraska', 'Nevada', 'New Hampshire', 'New Jersey', 'New Mexico', 'New York', 'North Carolina', 'North Dakota', 'Ohio', 'Oklahoma', 'Oregon', 'Pennsylvania', 'Rhode Island', 'South Carolina', 'South Dakota', 'Tennessee', 'Texas', 'Utah', 'Vermont', 'Virginia', 'Washington', 'West Virginia', 'Wisconsin', 'Wyoming', 'Puerto Rico'],inplace=True)\n\u001b[0;32m      3\u001b[0m \u001b[0mcateg_features\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;34m'State'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m;\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mone_hot_df\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mconcat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget_dummies\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mcol\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mprefix\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mcol\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mcol\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mcateg_features\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mdf\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mconcat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mone_hot_df\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0maxis\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'df' is not defined"
      ]
     }
    ],
@@ -1154,8 +1128,150 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "c2e86614-e57f-4c4c-a77f-b55b0a4d1931",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "'''\n",
+    "    def __init__(self, n_hidden=30,\n",
+    "                 C=0.0, epochs=500, eta=0.001, random_state=None):\n",
+    "        np.random.seed(random_state)\n",
+    "        self.n_hidden = n_hidden\n",
+    "        self.l2_C = C\n",
+    "        self.epochs = epochs\n",
+    "        self.eta = eta\n",
+    "'''\n",
+    "#!!!!NEED TO EDIT ALL OTHER FUNCTIONS THAT CALL THESE OVERLOADED FUNCTION IN THIS CLASS\n",
+    "\n",
+    "class ThreeLayerPerceptron(TwoLayerPerceptronBase):\n",
+    "    def __init__(self):\n",
+    "        super().__init__(self, n_hidden=30,\n",
+    "                 C=0.0, epochs=500, eta=0.001, random_state=None)\n",
+    "        self.g1 = 0\n",
+    "        self.g2 = 0\n",
+    "        self.g3 = 0\n",
+    "        \n",
+    "    def _initialize_weights(self):\n",
+    "        \"\"\"Initialize weights with small random numbers.\"\"\"\n",
+    "        W1_num_elems = (self.n_features_ + 1)*self.n_hidden\n",
+    "        W1 = np.random.uniform(-1.0, 1.0,size=W1_num_elems)\n",
+    "        W1 = W1.reshape(self.n_hidden, self.n_features_ + 1) # reshape to be W\n",
+    "        \n",
+    "        W2_num_elems = (self.n_hidden + 1)*self.n_output_\n",
+    "        W2 = np.random.uniform(-1.0, 1.0, size=W2_num_elems)\n",
+    "        W2 = W2.reshape(self.n_output_, self.n_hidden + 1)\n",
+    "        \n",
+    "        W3_num_elems = (self.n_hidden + 1)*self.n_output_\n",
+    "        W3 = np.random.uniform(-1.0, 1.0, size=W3_num_elems)\n",
+    "        W3 = W3.reshape(self.n_output_, self.n_hidden + 1)\n",
+    "        \n",
+    "        return W1, W2, W3\n",
+    "    \n",
+    "    #This is based off the TwoLayer method\n",
+    "    #But I think it might be incorrect, online it doesn't seem like L2 regularization has sqrt()\n",
+    "    @staticmethod\n",
+    "    def _L2_reg(lambda_, W1, W2, W3):\n",
+    "        \"\"\"Compute L2-regularization cost\"\"\"\n",
+    "        # only compute for non-bias terms\n",
+    "        return (lambda_/2.0) * (np.sqrt(np.mean(W1[:, 1:] ** 2) + np.mean(W2[:, 1:] ** 2) + np.mean(W3[:, 1:] ** 2)))\n",
+    "\n",
+    "    \n",
+    "    def _cost(self,A4,Y_enc,W1,W2,W3):\n",
+    "        \"\"\"Get the objective function value\"\"\"\n",
+    "        cost = np.mean((Y_enc-A4)**2)\n",
+    "        L2_term = self._L2_reg(self.l2_C, W1, W2, W3)\n",
+    "        return cost + L2_term\n",
+    "                                \n",
+    "    def _feedforward(self, X, W1, W2, W3):\n",
+    "        \"\"\"Compute feedforward step\n",
+    "        \"\"\"\n",
+    "        A1 = self._add_bias_unit(X, how='column')\n",
+    "        A1 = A1.T\n",
+    "        Z1 = W1 @ A1\n",
+    "        A2 = self._sigmoid(Z1)\n",
+    "        A2 = self._add_bias_unit(A2, how='row')\n",
+    "        Z2 = W2 @ A2\n",
+    "        A3 = self._sigmoid(Z2)\n",
+    "        A3 = self._add_bias_unit(A3, how='row')\n",
+    "        Z3 = W3 @ A3\n",
+    "        A4 = self._sigmoid(Z3)\n",
+    "        return A1, Z1, A2, Z2, A3, Z3, A4\n",
+    "\n",
+    "                       \n",
+    "    def _get_gradient(self, A1, A2, A3, A4, Z1, Z2, Z3, Y_enc, W1, W2, W3):\n",
+    "        \"\"\" Compute gradient step using backpropagation.\n",
+    "        \"\"\"\n",
+    "        # vectorized backpropagation\n",
+    "        V3 = -2*(Y_enc-A4)*A4*(1-A4)  # last layer sensitivity\n",
+    "        V2 = A3*(1-A3)*(W3.T @ V3) # back prop the sensitivity \n",
+    "        V1 = A2*(1-A2)*(W2.T @ V2) # back prop the sensitivity \n",
+    "        \n",
+    "        grad3 = V3 @ A3.T # no bias on final layer\n",
+    "        grad2 = V2 @ A2.T # dont back prop sensitivity of bias\n",
+    "        grad1 = V1[1:,:] @ A1.T # dont back prop sensitivity of bias\n",
+    "        \n",
+    "        \n",
+    "        # regularize weights that are not bias terms\n",
+    "        grad1[:, 1:] += W1[:, 1:] * self.l2_C\n",
+    "        grad2[:, 1:] += W2[:, 1:] * self.l2_C\n",
+    "        grad3[:, 1:] += W3[:, 1:] * self.l2_C\n",
+    "        \n",
+    "        g1, g2, g3 = grad1, grad2, grad3\n",
+    "        return grad1, grad2, grad3\n",
+    "\n",
+    "                                \n",
+    "    def predict(self, X):\n",
+    "        \"\"\"Predict class labels\"\"\"\n",
+    "        _, _, _, _, _, _, A4  = self._feedforward(X, self.W1, self.W2, self.W3)\n",
+    "        y_pred = np.argmax(A4, axis=0)\n",
+    "        return y_pred\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "4e641bfe-0f69-4e72-82dd-4acbb250414a",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "#plotting gradients versus epochs\n",
+    "def print_grad(nn,X_train,y_train,X_test,y_test,title=\"\",color=\"red\"):\n",
+    "    \n",
+    "    print(\"=================\")\n",
+    "    print(title,\":\")\n",
+    "    yhat = nn.predict(X_train)\n",
+    "    print('Resubstitution acc:',accuracy_score(y_train,yhat))\n",
+    "    \n",
+    "    yhat = nn.predict(X_test)\n",
+    "    print('Validation acc:',accuracy_score(y_test,yhat))\n",
+    "    \n",
+    "    if hasattr(nn,'val_score_'):\n",
+    "        plt.plot(range(len(nn.val_score_)), nn.val_score_, color=color,label=title)\n",
+    "        plt.ylabel('Validation Accuracy')\n",
+    "    else:\n",
+    "        plt.plot(range(len(nn.score_)), nn.score_, color=color,label=title)\n",
+    "        plt.ylabel('Resub Accuracy')\n",
+    "        \n",
+    "    plt.xlabel('Epochs')\n",
+    "    plt.tight_layout()\n",
+    "    plt.legend(loc='best')\n",
+    "    plt.grid(True)\n",
+    "    \n",
+    "    #gradient plot\n",
+    "    plt.plot(range(len(nn.g1)), nn.g1,range(len(nn.g2)), nn.g2,range(len(nn.g3)), nn.g3, color=color,label=title)\n",
+    "    plt.ylabel('Average Gradients')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d2fdd431-dbf4-4fe9-a873-4ca838eb4adf",
    "metadata": {},
    "outputs": [],
    "source": []
